fixing vertical line misalignment

--- a/src/our-story/our-story-timeline.module.css
+++ b/src/our-story/our-story-timeline.module.css
@@ -6,6 +6,7 @@
   text-align: justify;
   color: var(--light-grey);
   padding-top: 20px;
+  margin: auto 0;
 }
 
 .yearContent{
